src/main/kubernetes/kubernetes.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: rclone-operator-validating-webhook
  annotations:
    cert-manager.io/inject-ca-from: rclone-operator/rclone-operator-webhook
webhooks:
  - name: vrcloneremote.rco.frozenbits.se
    admissionReviewVersions: [v1]
    sideEffects: None
    failurePolicy: Fail
    clientConfig:
      service:
        name: rclone-operator
        namespace: rclone-operator
        path: /webhooks/validate/rcloneremotes
        port: 443
    rules:
      - apiGroups: [rco.frozenbits.se]
        apiVersions: [v1alpha1]
        operations: [CREATE, UPDATE]
        resources: [rcloneremotes]
  - name: vrcloneclusterremote.rco.frozenbits.se
    admissionReviewVersions: [v1]
    sideEffects: None
    failurePolicy: Fail
    clientConfig:
      service:
        name: rclone-operator
        namespace: rclone-operator
        path: /webhooks/validate/rcloneclusterremotes
        port: 443
    rules:
      - apiGroups: [rco.frozenbits.se]
        apiVersions: [v1alpha1]
        operations: [CREATE, UPDATE]
        resources: [rcloneclusterremotes]
  - name: vrclonesync.rco.frozenbits.se
    admissionReviewVersions: [v1]
    sideEffects: None
    failurePolicy: Fail
    clientConfig:
      service:
        name: rclone-operator
        namespace: rclone-operator
        path: /webhooks/validate/rclonesyncs
        port: 443
    rules:
      - apiGroups: [rco.frozenbits.se]
        apiVersions: [v1alpha1]
        operations: [CREATE, UPDATE]
        resources: [rclonesyncs]
